# deep-neurographs

./: .index.html.swp  README.md  generate_toydata.py  pyproject.toml
.github/workflows/: init.yml  tag_and_publish.yml
doc_template/source/: conf.py
src/aind_library_template/: __init__.py
src/deep_neurographs/: .graph_utils.py.swp  .test_build_neurograph.py.swp  __init__.py  config.py  delete_merges_gt.py  densegraph.py  doubles_removal.py  edit_graph.py  evaluation.py  feature_extraction.py  fragment_filtering.py  fragments_graph.py  gcn.py  generate_proposals.py  geometry.py  geometry_utils.py  graph_artifact_removal.py  graph_classes.py  graph_utils.py  groundtruth_generation.py  img_utils.py  inference.py  inference_pipeline.py  intake.py  net.py  neural_networks.py  neurograph.py  proposal_generation.py  proposal_graph.py  reconstruction.py  run_graphtrace.py  run_graphtrace_pipeline.py  s3_utils.py  seedbased_inference.py  skeleton_graph.py  structural_inference.py  swc_utils.py  train.py  train_graphtrace.py  train_pipeline.py  (+2 more)
src/deep_neurographs/deep_learning/: datasets.py  loss.py  models.py  old-net.py  train.py
src/deep_neurographs/machine_learning/: augmentation.py  datasets.py  evaluation.py  feature_extraction.py  feature_generation.py  feature_generation_graphs.py  gnn_trainer.py  gnn_utils.py  graph_datasets.py  graph_models.py  graph_trainer.py  groundtruth_generation.py  hetero_feature_generation.py  hetero_graph_datasets.py  hetero_graph_models.py  hetero_graph_trainer.py  heterogeneous_feature_generation.py  heterogeneous_graph_datasets.py  heterogeneous_graph_models.py  heterogeneous_graph_trainer.py  heterograph_datasets.py  heterograph_feature_generation.py  heterograph_models.py  heterograph_trainer.py  inference.py  loss.py  ml_utils.py  models.py  old-net.py  seeded_inference.py  train.py  trainer.py  vision_models.py
src/deep_neurographs/merge_correction/: train.py
src/deep_neurographs/merge_detection/: skeleton_graph.py  train.py
src/deep_neurographs/merge_proofreading/: inference.py  train_detection.py
src/deep_neurographs/split_correction/: feature_generation.py  heterograph_models.py  models.py  train.py
src/deep_neurographs/split_proofreading/: datasets.py  feature_generation.py  groundtruth_generation.py  inference.py  models.py  proposal_generation.py  train_correction.py
src/deep_neurographs/utils/: geometry_util.py  gnn_util.py  graph_util.py  img_util.py  io_util.py  ml_util.py  smartsheet_util.py  swc_util.py  util.py
src/neuron_proofreader/: config.py  evaluation.py  proposal_graph.py  skeleton_graph.py  visualization.py
src/neuron_proofreader/machine_learning/: trainer.py  vision_models.py
src/neuron_proofreader/merge_proofreading/: inference.py  train_detection.py
src/neuron_proofreader/split_proofreading/: datasets.py  feature_generation.py  groundtruth_generation.py  inference.py  models.py  proposal_generation.py  train_correction.py
src/neuron_proofreader/utils/: geometry_util.py  graph_util.py  img_util.py  ml_util.py  swc_util.py
tests/: test_build_graph.py  test_build_neurograph.py  test_example.py  test_message_handler.py  test_neurograph_build.py  test_single_graph_pipeline.py  test_train_pipeline.py
tutorials/: demo.ipynb
tutorials/1-load_data/: demo_load_data.ipynb
tutorials/1-load_data/swcs/: 825355103.swc  825355108.swc  825359677.swc  825359685.swc  825359700.swc  825359706.swc  825359707.swc  825359716.swc  (+138 more)
tutorials/features/: input_graph_features_653158-007.pkl
tutorials/groundtruth_graphs/: groundtruth_graph_653158-007.pkl  groundtruth_graph_653158-009.pkl
tutorials/inference/: GraphNeuralNet-2024-10-12.pth  demo.ipynb
tutorials/input_graphs/: input_graph_653158-009.pkl  input_graph_706301-000.pkl
(+7 files in other folders)
