[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neuron-proofreader"
description = "Python library for automated proofreading of split and merge mistakes in neuron reconstructions."
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Anna Grim"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'aiobotocore==2.13.3',
    'boto3',
    'botocore==1.34.162',
    'einops',
    'fastremap',
    'google-cloud-storage',
    'matplotlib',
    'more_itertools',
    'networkx',
    'pandas',
    'plotly',
    's3fs==2024.12.0',
    'scikit-image',
    'scikit-learn',
    'scipy',
    'smartsheet-python-sdk',
    'tensorboard',
    'tensorstore==0.1.71',
    'torch',
    'torcheval',
    'torchvision',
    'torch_geometric==2.5.3',
    'tqdm',
    'urllib3==1.26.15',
    'zarr',
    "aind-exaspim-dataset-utils @ git+https://github.com/AllenNeuralDynamics/aind-exaspim-dataset-utils.git@main"
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "neuron_proofreader.__version__"}

[tool.black]
line-length = 79
target_version = ['py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["neuron_proofreader", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
